force-app/main/default/objects/CountryCode__c/CountryCode__c.object-meta.xml
<CustomObject>
    <label>Country Code</label>
    <nameField>
        <label>Country code</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Country Code</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>