force-app/main/default/objects/CountryCode__c/fields/CN_Name__c.field-meta.xml
<CustomField>
    <fullName>CN_Name__c</fullName>
    <label>Chinese Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>