force-app/main/default/objects/CountryCode__c/fields/Continent__c.field-meta.xml
<CustomField>
    <fullName>Continent__c</fullName>
    <label>Continent</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>非洲</fullName>
            </value>
            <value>
                <fullName>北美洲</fullName>
            </value>
            <value>
                <fullName>南美洲</fullName>
            </value>
            <value>
                <fullName>亞洲</fullName>
            </value>
            <value>
                <fullName>澳洲</fullName>
            </value>
            <value>
                <fullName>歐洲</fullName>
            </value>
            <value>
                <fullName>南極洲</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>