force-app/main/default/objects/CountryCode__c/fields/EN_Name__c.field-meta.xml
<CustomField>
    <fullName>EN_Name__c</fullName>
    <label>English Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>