force-app/main/default/objects/CountryCode__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>CN_Name__c</columns>
    <columns>EN_Name__c</columns>
    <columns>Continent__c</columns>
    <columns>CountryCode__c</columns>
    <filterScope>Everything</filterScope>
    <label>全部</label>
</ListView>